[package]
name = "plane-tests"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
bollard = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.29"
hyper = { version = "0.14.27", features = ["server"] }
plane = { path = "../plane-dynamic", package = "plane-dynamic" }
plane-test-macro = { path = "plane-test-macro" }
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
