[package]
name = "plane-tests"
version = "0.4.12"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
axum = "0.7.5"
bollard = "0.17.0"
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3.29"
hyper = { version = "1", features = ["server"] }
plane = { path = "../plane-dynamic", package = "plane-dynamic" }
plane-test-macro = { path = "plane-test-macro" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
